--- a/vue/index.html
+++ b/vue/index.html
@@ -521,8 +521,8 @@
                 instance.get("json/missingDemo.json").then(respon => this.missingDic=respon.data);
             },
             getTestdata(id){
-                // instance.get("/task/?id="+id)
-                    instance.get("./json/test.json")
+                instance.get("/task/?id="+id)
+                    // instance.get("./json/test.json")
                     .then((respon)=> {
                     this.depDic={};
                     this.depsConflictDic=[];
