修复本地依赖不显示

--- a/vue/index.html
+++ b/vue/index.html
@@ -520,6 +520,7 @@
                             this.mode = 2;
                             //处理依赖关系
                             pro_depend = respon.data["Dependency"]["Project"];
+                            pro_depend = [pro_depend];
                             for (let pro in pro_depend) {
                                 if (pro_depend[pro]["Dependencies"] != null) {
                                     if (this.depDic[pro_depend[pro]["Name"]]) {
