--- a/vue/index.html
+++ b/vue/index.html
@@ -576,8 +576,8 @@
         },
         methods: {
             getTestdata(id) {
-                // instance.get("/task/?id="+id)
-                instance.get("./json/test.json")
+                instance.get("/task/?id="+id)
+                // instance.get("./json/test.json")
                     .then((respon) => {
                         this.depDic = [];
                         this.depsConflictDic = [];
